[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["*.*"]

[project]
name = "pecolib"
version = "0.0.1"
authors = [
  { name="Peter Sovietov", email="peter.sovietov@gmail.com" },
]
description = "Tiny parser combinators library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/true-grue/peco"
Issues = "https://github.com/true-grue/peco/issues"
